--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
+    "C_Cpp.clang_format_style": "{BasedOnStyle: Google, IndentWidth: 4, AllowShortFunctionsOnASingleLine: None, AccessModifierOffset: -4}",
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true,
     "cSpell.words": [
         "Aques",
         "libaquestalk"
-    ]
+    ],
 }
