--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,6 @@
 [platformio]
-default_envs = m5stack
+default_envs = m5stack-core2
+; default_envs = m5stack-basic
 
 [env]
 platform = espressif32
@@ -8,19 +9,34 @@ monitor_speed = 115200
 monitor_filters = time, esp32_exception_decoder
 upload_speed = 1500000
 board_build.f_flash = 80000000L
-
-[env:m5stack]
-board = m5stack-core-esp32
 build_flags =
-    -DTARGET_M5STACK
-    -I.pio/libdeps/${PIOENV}/M5Stack-Avatar/lib/AquesTalkTTS
     -laquestalk
     -Llib/AquesTalkTTS
-src_filter = +<*.h> +<*.cpp>
-upload_port = COM5
-monitor_port = ${env:m5stack.upload_port}
-lib_extra_dirs = .pio/libdeps/${PIOENV}/M5Stack-Avatar/lib
 lib_deps =
-    M5Stack
     M5Stack-Avatar
     AquesTalkTTS
+src_filter = +<*.h> +<*.cpp>
+# upload_port = COM12
+# monitor_port = ${env:m5stack.upload_port}
+lib_extra_dirs = lib
+
+[env:m5stack-basic]
+board = m5stack-core-esp32
+build_flags =
+    ${env.build_flags}
+    -DTARGET_M5BASIC
+lib_deps =
+    ${env.lib_deps}
+    M5Stack
+
+
+[env:m5stack-core2]
+board = m5stack-core2
+board_build.partitions = partitions_core2.csv
+build_flags =
+    ${env.build_flags}
+    -DTARGET_M5CORE2
+    -DENABLE_SPIFFS_DIC
+lib_deps =
+    ${env.lib_deps}
+    M5Core2
